# ETL_Python_DuckDB

./: Dockerfile  README.md  app.py  duckdb.db  exemplo.env  pipeline.py  pipiline_00.py  pyproject.toml
