[tool.poetry]
name = "etl-python-duckdb"
version = "0.1.0"
description = ""
authors = ["Ravi Pellizzi <r.pellizzi09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
