[tool.poetry]
name = "etl-python-duckdb"
version = "0.1.0"
description = ""
authors = ["Ravi Pellizzi <r.pellizzi09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.1"
gdown = "^5.1.0"
duckdb = "^0.10.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
